samples/_failures_safe/1761257572_3aadbd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5c80f611.c: In function ‘main’:
./samples/SAFE/__tmp_5c80f611.c:153:20: error: expected ‘]’ at end of input
  153 |     char input[1024
      |                    ^
      |                    ]
./samples/SAFE/__tmp_5c80f611.c:153:5: error: expected declaration or statement at end of input
  153 |     char input[1024
      |     ^~~~
